fixed overflow for after psuedo for h1

--- a/zuritalent.css
+++ b/zuritalent.css
@@ -69,6 +69,7 @@ a {
 .vett_text h1{
     color: black;
 font-size: 40px;
+text-align: center;
 }
 .vett_text #intro{
   max-width: 500px;
@@ -87,11 +88,10 @@ span{
   color: #E7332B;
 }
 .vett_text h1::after{
-  content: "";
-  background-image: url(./image/talent.zuri.team/thick-wave.svg);
+  content: url(./image/talent.zuri.team/thick-wave.svg);
   position: absolute;
-  top: 255px;
-  left: 450px;
+  top: 80px;
+  left: 47%;
   width: 20px;
 
 }
@@ -147,6 +147,7 @@ span{
   display: flex;
   align-items: center;
   width: 400px;
+  margin: 0 auto;
   justify-content: space-between;
 }
 .country img{
@@ -156,10 +157,10 @@ span{
   width: 70px;
   height: 70px;
 }
-.world h1{
+/* .world h1{
   max-width: 450px;
-  width: 100%;
-}
+  width: 50%;
+} */
 .bg_img .connect{
   margin: 80px 50px 50px 200px;
 }
@@ -318,8 +319,8 @@ footer{
     .vett_text h1::after {
     content: url(./image/talent.zuri.team/thick-wave.svg);
     position: absolute;
-    top: 165px;
-    left: 670px;
+    top: 15px;
+    left: 67%;
     width: 20px;
   }
   .bg_img{
@@ -382,8 +383,8 @@ footer {
     .vett_text h1::after {
     content: url(./image/talent.zuri.team/thick-wave.svg);
     position: absolute;
-    top: 170px;
-    left: 530px;
+    top: 20px;
+    left: 70%;
     width: 20px;
 }
 .box {
@@ -432,8 +433,8 @@ footer {
   .vett_text h1::after {
     content: url(./image/talent.zuri.team/thick-wave.svg);
     position: absolute;
-    top: 170px;
-    left: 330px;
+    top: 70px;
+    left: 45%;
     width: 20px;
   }
 footer {
